# LoneVerse

./: .env.example  .replit  AI_RISK_COMPARISON.md  DEBUGGING_CONTRACT_ISSUE.md  DEFI_PLATFORM_COMPARISON.md  DEPLOYMENT_GUIDE.md  LOAN_FUNDING_FIX.md  LOCAL_QUICKSTART.bat  LOCAL_QUICKSTART.sh  LOCAL_SETUP_GUIDE.md  MULTITOKEN_FEATURES.md  PLATFORM_COMPARISON_VISUAL_SUMMARY.md  POOLING_IMPLEMENTATION.md  PRESENTATION_GUIDE.md  QUICK_FIX_SUMMARY.md  README.md  RESEARCH_PAPER_SUMMARY.md  SETUP_INSTRUCTIONS.md  SYSTEM_COMPARISON_SUMMARY.md  VS_CODE_COMMANDS.md  VS_CODE_FIX_GUIDE.md  VS_CODE_LOCAL_SETUP.md  VS_CODE_SETUP.md  VS_CODE_SETUP_AND_RUN.md  deploy-local.js  hardhat.config.js  index.html  main.py  mint.js  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  test-loan.js  test-tokens.js  vite.config.ts
attached_assets/: Pasted--Account-0-0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266-1_1766647754895.txt  Pasted--C-Users-Administrator-OneDrive-Desktop-LoneVerse-Deploy-the-smart-contracts-npx-hardhat-r-1758391181542_1758391181543.txt  Pasted--C-Users-Administrator-OneDrive-Desktop-LoneVerse-backe_1766652805856.txt  Pasted--Checking-for-liquidatable-V4-loans-Checking-for-liquid_1766670300414.txt  Pasted--Could-not-fetch-nextLoanId-using-fallback-method-execu_1766682746572.txt  Pasted--Deploy-the-smart-contracts-npx-hardhat-run-scripts-deployV2-js-network-localhost-Warning-U-1758387626596_1758387626597.txt  Pasted--Deploy-to-local-hardhat-network-npx-hardhat-run-scripts-deployV2-js-network-localhost-Warn-1759063347143_1759063347144.txt  (+44 more)
src/: App.tsx  (+1 more)
(+158 files in other folders)
